[package]
name = "twilio"
version = "1.1.0"
description = "Rust bindings for the Twilio API"
readme = "README.md"
repository = "https://github.com/neil-lobracco/twilio-rs"
license = "MIT"
authors = [
    "Neil LoBracco <neil.lobracco@gmail.com>",
    "Lance Carlson <lancecarlson@gmail.com>",
]
keywords = ["twilio", "rust"]
edition = "2018"

[dependencies]
arrayvec = { version = "0.7.6", features = ["serde"] }
base64 = "0.12"
bitflags = "2.9.0"
compact_str = { version = "0.9.0", features = ["serde"] }
headers = "0.3.2"
hmac = "0.12"
hyper = { version = "0.14", features = ["client", "http1", "http2", "deprecated"] }
hyper-tls = "0.5"
isocountry = "0.3.2"
mime = "0.3"
serde = { version = "1.0.10", features = ["derive"] }
serde_json = "1.0.2"
sha1 = "0.10"
thiserror = "2.0.12"
url = "2.0"

[dev-dependencies]
dotenv = "0.15"
hyper = { version = "0.14", features = ["server"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
