[package]
name = "twilio"
version = "1.1.0"
description = "Rust bindings for the Twilio API"
readme = "README.md"
repository = "https://github.com/neil-lobracco/twilio-rs"
license = "MIT"
authors = [
    "Neil LoBracco <neil.lobracco@gmail.com>",
    "Lance Carlson <lancecarlson@gmail.com>",
]
keywords = ["twilio", "rust"]
edition = "2018"

[dependencies]
arrayvec = { version = "0.7.6", features = ["serde"] }
base64 = "0.12"
bitflags = "2.9.0"
bytes = "1.11.0"
compact_str = { version = "0.9.0", features = ["serde"] }
headers = "0.4.1"
hmac = "0.12"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["client", "http1", "http2"] }
hyper-tls = "0.6"
hyper-util = { version = "0.1.19", features = ["client", "client-legacy", "http1", "http2"] }
isocountry = "0.3.2"
mime = "0.3"
serde = { version = "1.0.10", features = ["derive"] }
serde_json = "1.0.2"
sha1 = "0.10"
thiserror = "2.0.12"
url = "2.0"

[dev-dependencies]
dotenv = "0.15"
hyper-util = { version = "0.1.19", features = ["server"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
